@@ -24,7 +24,6 @@ import com.rabbitmq.client.impl.DefaultExceptionHandler;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.ExecutorService;
@@ -44,12 +43,12 @@ import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
 import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.processor.util.StandardValidators;
-import org.apache.nifi.ssl.SSLContextService;
+import org.apache.nifi.ssl.SSLContextProvider;
 
 
 /**
  * Base processor that uses RabbitMQ client API
- * (https://www.rabbitmq.com/api-guide.html) to rendezvous with AMQP-based
+ * (<a href="https://www.rabbitmq.com/api-guide.html">Java Client API Guide</a>) to rendezvous with AMQP-based
  * messaging systems version 0.9.1
  *
  * @param <T> the type of {@link AMQPWorker}. Please see {@link AMQPPublisher}
@@ -57,6 +56,20 @@ import org.apache.nifi.ssl.SSLContextService;
  */
 abstract class AbstractAMQPProcessor<T extends AMQPWorker> extends AbstractProcessor {
 
+    public static final String AMQP_APPID_ATTRIBUTE = "amqp$appId";
+    public static final String AMQP_CONTENT_ENCODING_ATTRIBUTE = "amqp$contentEncoding";
+    public static final String AMQP_CONTENT_TYPE_ATTRIBUTE = "amqp$contentType";
+    public static final String AMQP_HEADERS_ATTRIBUTE = "amqp$headers";
+    public static final String AMQP_DELIVERY_MODE_ATTRIBUTE = "amqp$deliveryMode";
+    public static final String AMQP_PRIORITY_ATTRIBUTE = "amqp$priority";
+    public static final String AMQP_CORRELATION_ID_ATTRIBUTE = "amqp$correlationId";
+    public static final String AMQP_REPLY_TO_ATTRIBUTE = "amqp$replyTo";
+    public static final String AMQP_EXPIRATION_ATTRIBUTE = "amqp$expiration";
+    public static final String AMQP_MESSAGE_ID_ATTRIBUTE = "amqp$messageId";
+    public static final String AMQP_TIMESTAMP_ATTRIBUTE = "amqp$timestamp";
+    public static final String AMQP_TYPE_ATTRIBUTE = "amqp$type";
+    public static final String AMQP_USER_ID_ATTRIBUTE = "amqp$userId";
+    public static final String AMQP_CLUSTER_ID_ATTRIBUTE = "amqp$clusterId";
     public static final PropertyDescriptor BROKERS = new PropertyDescriptor.Builder()
             .name("Brokers")
             .description("A comma-separated list of known AMQP Brokers in the format <host>:<port> (e.g., localhost:5672). If this is " +
@@ -114,7 +127,7 @@ abstract class AbstractAMQPProcessor<T extends AMQPWorker> extends AbstractProce
             .displayName("SSL Context Service")
             .description("The SSL Context Service used to provide client certificate information for TLS/SSL connections.")
             .required(false)
-            .identifiesControllerService(SSLContextService.class)
+            .identifiesControllerService(SSLContextProvider.class)
             .build();
     public static final PropertyDescriptor USE_CERT_AUTHENTICATION = new PropertyDescriptor.Builder()
             .name("cert-authentication")
@@ -126,24 +139,18 @@ abstract class AbstractAMQPProcessor<T extends AMQPWorker> extends AbstractProce
             .addValidator(StandardValidators.BOOLEAN_VALIDATOR)
             .build();
 
-    private static final List<PropertyDescriptor> propertyDescriptors;
-
-    static {
-        final List<PropertyDescriptor> properties = new ArrayList<>();
-        properties.add(BROKERS);
-        properties.add(HOST);
-        properties.add(PORT);
-        properties.add(V_HOST);
-        properties.add(USER);
-        properties.add(PASSWORD);
-        properties.add(AMQP_VERSION);
-        properties.add(SSL_CONTEXT_SERVICE);
-        properties.add(USE_CERT_AUTHENTICATION);
-        propertyDescriptors = Collections.unmodifiableList(properties);
-    }
+    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
+            BROKERS,
+            HOST, PORT,
+            V_HOST,
+            USER,
+            PASSWORD,
+            AMQP_VERSION,
+            SSL_CONTEXT_SERVICE,
+            USE_CERT_AUTHENTICATION);
 
     protected static List<PropertyDescriptor> getCommonPropertyDescriptors() {
-        return propertyDescriptors;
+        return PROPERTY_DESCRIPTORS;
     }
 
     private BlockingQueue<AMQPResource<T>> resourceQueue;
@@ -303,11 +310,11 @@ abstract class AbstractAMQPProcessor<T extends AMQPWorker> extends AbstractProce
         }
 
         // handles TLS/SSL aspects
-        final SSLContextService sslService = context.getProperty(SSL_CONTEXT_SERVICE).asControllerService(SSLContextService.class);
+        final SSLContextProvider sslContextProvider = context.getProperty(SSL_CONTEXT_SERVICE).asControllerService(SSLContextProvider.class);
         final Boolean useCertAuthentication = context.getProperty(USE_CERT_AUTHENTICATION).asBoolean();
 
-        if (sslService != null) {
-            final SSLContext sslContext = sslService.createContext();
+        if (sslContextProvider != null) {
+            final SSLContext sslContext = sslContextProvider.createContext();
             cf.useSslProtocol(sslContext);
 
             if (useCertAuthentication) {
