@@ -52,7 +52,6 @@ import org.apache.nifi.components.ConfigVerificationResult;
 import org.apache.nifi.components.ConfigVerificationResult.Outcome;
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.components.PropertyDescriptor.Builder;
-import org.apache.nifi.components.ValidationContext;
 import org.apache.nifi.components.ValidationResult;
 import org.apache.nifi.components.Validator;
 import org.apache.nifi.components.state.Scope;
@@ -106,7 +105,7 @@ import static org.apache.nifi.processors.aws.util.RegionUtilV1.REGION;
 @TriggerWhenEmpty
 @InputRequirement(Requirement.INPUT_FORBIDDEN)
 @Tags({"Amazon", "S3", "AWS", "list"})
-@SeeAlso({FetchS3Object.class, PutS3Object.class, DeleteS3Object.class})
+@SeeAlso({FetchS3Object.class, PutS3Object.class, DeleteS3Object.class, CopyS3Object.class, GetS3ObjectMetadata.class, TagS3Object.class})
 @CapabilityDescription("Retrieves a listing of objects from an S3 bucket. For each object that is listed, creates a FlowFile that represents "
         + "the object so that it can be fetched in conjunction with FetchS3Object. This Processor is designed to run on Primary Node only "
         + "in a cluster. If the primary node changes, the new Primary Node will pick up where the previous node left off without duplicating "
@@ -291,7 +290,7 @@ public class ListS3 extends AbstractS3Processor implements VerifiableProcessor {
         .build();
 
 
-    public static final List<PropertyDescriptor> properties = List.of(
+    public static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
         BUCKET_WITHOUT_DEFAULT_VALUE,
         REGION,
         AWS_CREDENTIALS_PROVIDER_SERVICE,
@@ -318,9 +317,11 @@ public class ListS3 extends AbstractS3Processor implements VerifiableProcessor {
         LIST_TYPE,
         REQUESTER_PAYS);
 
-    public static final Set<Relationship> relationships = Collections.singleton(REL_SUCCESS);
+    public static final Set<Relationship> RELATIONSHIPS = Set.of(
+            REL_SUCCESS
+    );
 
-    private static final Set<PropertyDescriptor> TRACKING_RESET_PROPERTIES = Set.of(
+    private static final Set<PropertyDescriptor> TRACKING_RESET_PROPERTY_DESCRIPTORS = Set.of(
             BUCKET_WITHOUT_DEFAULT_VALUE,
             REGION,
             PREFIX,
@@ -349,7 +350,7 @@ public class ListS3 extends AbstractS3Processor implements VerifiableProcessor {
 
     @Override
     public void onPropertyModified(final PropertyDescriptor descriptor, final String oldValue, final String newValue) {
-        if (isConfigurationRestored() && TRACKING_RESET_PROPERTIES.contains(descriptor)) {
+        if (isConfigurationRestored() && TRACKING_RESET_PROPERTY_DESCRIPTORS.contains(descriptor)) {
             resetTracking = true;
         }
     }
@@ -392,46 +393,40 @@ public class ListS3 extends AbstractS3Processor implements VerifiableProcessor {
     }
 
     private static Validator createRequesterPaysValidator() {
-        return new Validator() {
-            @Override
-            public ValidationResult validate(final String subject, final String input, final ValidationContext context) {
-                boolean requesterPays = Boolean.parseBoolean(input);
-                boolean useVersions = context.getProperty(USE_VERSIONS).asBoolean();
-                boolean valid = !requesterPays || !useVersions;
-                return new ValidationResult.Builder()
-                        .input(input)
-                        .subject(subject)
-                        .valid(valid)
-                        .explanation(valid ? null : "'Requester Pays' cannot be used when listing object versions.")
-                        .build();
-            }
+        return (subject, input, context) -> {
+            boolean requesterPays = Boolean.parseBoolean(input);
+            boolean useVersions = context.getProperty(USE_VERSIONS).asBoolean();
+            boolean valid = !requesterPays || !useVersions;
+            return new ValidationResult.Builder()
+                    .input(input)
+                    .subject(subject)
+                    .valid(valid)
+                    .explanation(valid ? null : "'Requester Pays' cannot be used when listing object versions.")
+                    .build();
         };
     }
     private static Validator createMaxAgeValidator() {
-        return new Validator() {
-            @Override
-            public ValidationResult validate(final String subject, final String input, final ValidationContext context) {
-                Double  maxAge = input != null ? FormatUtils.getPreciseTimeDuration(input, TimeUnit.MILLISECONDS) : null;
-                long minAge = context.getProperty(MIN_AGE).asTimePeriod(TimeUnit.MILLISECONDS);
-                boolean valid = input != null && maxAge > minAge;
-                return new ValidationResult.Builder()
-                        .input(input)
-                        .subject(subject)
-                        .valid(valid)
-                        .explanation(valid ? null : "'Maximum Age' must be greater than 'Minimum Age' ")
-                        .build();
-            }
+        return (subject, input, context) -> {
+            Double  maxAge = input != null ? FormatUtils.getPreciseTimeDuration(input, TimeUnit.MILLISECONDS) : null;
+            long minAge = context.getProperty(MIN_AGE).asTimePeriod(TimeUnit.MILLISECONDS);
+            boolean valid = input != null && maxAge > minAge;
+            return new ValidationResult.Builder()
+                    .input(input)
+                    .subject(subject)
+                    .valid(valid)
+                    .explanation(valid ? null : "'Maximum Age' must be greater than 'Minimum Age' ")
+                    .build();
         };
     }
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return properties;
+        return PROPERTY_DESCRIPTORS;
     }
 
     @Override
     public Set<Relationship> getRelationships() {
-        return relationships;
+        return RELATIONSHIPS;
     }
 
     private Set<String> extractKeys(final StateMap stateMap) {
@@ -695,12 +690,12 @@ public class ListS3 extends AbstractS3Processor implements VerifiableProcessor {
                 .stream()
                 .filter(s3VersionSummary -> s3VersionSummary.getLastModified().getTime() >= minTimestampToList
                         && includeObjectInListing(s3VersionSummary, currentTime))
-                .map(s3VersionSummary -> new ListableEntityWrapper<S3VersionSummary>(
-                    s3VersionSummary,
-                    S3VersionSummary::getKey,
-                    summary -> summary.getKey() + "_" + summary.getVersionId(),
-                    summary -> summary.getLastModified().getTime(),
-                    S3VersionSummary::getSize
+                .map(s3VersionSummary -> new ListableEntityWrapper<>(
+                        s3VersionSummary,
+                        S3VersionSummary::getKey,
+                        summary -> summary.getKey() + "_" + summary.getVersionId(),
+                        summary -> summary.getLastModified().getTime(),
+                        S3VersionSummary::getSize
                 ))
                 .collect(Collectors.toList());
         }, null);
