@@ -31,7 +31,6 @@ import org.apache.nifi.flowfile.attributes.CoreAttributes;
 import org.apache.nifi.processor.AbstractProcessor;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
-import org.apache.nifi.processor.ProcessorInitializationContext;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.util.StandardValidators;
 import org.apache.nifi.record.path.FieldValue;
@@ -56,12 +55,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.HashMap;
 import java.util.Optional;
@@ -209,35 +204,42 @@ public class GeohashRecord extends AbstractProcessor {
             .description("The original input flowfile will be sent to this relationship")
             .build();
 
-    private static final List<PropertyDescriptor> RECORD_PATH_PROPERTIES = Collections.unmodifiableList(Arrays.asList(
-            LATITUDE_RECORD_PATH, LONGITUDE_RECORD_PATH, GEOHASH_RECORD_PATH
-    ));
+    private static final List<PropertyDescriptor> RECORD_PATH_PROPERTIES = List.of(
+            LATITUDE_RECORD_PATH,
+            LONGITUDE_RECORD_PATH,
+            GEOHASH_RECORD_PATH
+    );
 
-    private static final Set<Relationship> RELATIONSHIPS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(REL_SUCCESS, REL_ORIGINAL, REL_FAILURE)));
-    private static final Set<Relationship> SPLIT_RELATIONSHIPS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(REL_MATCHED, REL_NOT_MATCHED, REL_ORIGINAL, REL_FAILURE)));
+    private static final Set<Relationship> RELATIONSHIPS = Set.of(
+            REL_SUCCESS,
+            REL_ORIGINAL,
+            REL_FAILURE
+    );
+
+    private static final Set<Relationship> SPLIT_RELATIONSHIPS = Set.of(
+            REL_MATCHED,
+            REL_NOT_MATCHED,
+            REL_ORIGINAL,
+            REL_FAILURE
+    );
+
+    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
+            MODE,
+            RECORD_READER,
+            RECORD_WRITER,
+            ROUTING_STRATEGY,
+            LATITUDE_RECORD_PATH,
+            LONGITUDE_RECORD_PATH,
+            GEOHASH_RECORD_PATH,
+            GEOHASH_FORMAT,
+            GEOHASH_LEVEL
+    );
 
     private RoutingStrategyExecutor routingStrategyExecutor;
     private static boolean isSplit;
     private static Integer enrichedCount, unenrichedCount;
 
     private final RecordPathCache cache = new RecordPathCache(100);
-
-    private List<PropertyDescriptor> descriptors;
-
-    @Override
-    protected void init(final ProcessorInitializationContext context) {
-        descriptors = new ArrayList<>();
-        descriptors.add(MODE);
-        descriptors.add(RECORD_READER);
-        descriptors.add(RECORD_WRITER);
-        descriptors.add(ROUTING_STRATEGY);
-        descriptors.add(LATITUDE_RECORD_PATH);
-        descriptors.add(LONGITUDE_RECORD_PATH);
-        descriptors.add(GEOHASH_RECORD_PATH);
-        descriptors.add(GEOHASH_FORMAT);
-        descriptors.add(GEOHASH_LEVEL);
-        descriptors = Collections.unmodifiableList(descriptors);
-    }
 
     @Override
     public void onPropertyModified(final PropertyDescriptor descriptor, final String oldValue, final String newValue) {
@@ -253,7 +255,7 @@ public class GeohashRecord extends AbstractProcessor {
 
     @Override
     public final List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return descriptors;
+        return PROPERTY_DESCRIPTORS;
     }
 
     @OnScheduled
@@ -449,7 +451,7 @@ public class GeohashRecord extends AbstractProcessor {
         Optional<FieldValue> latitudeField = latitudeResult.getSelectedFields().findFirst();
         Optional<FieldValue> longitudeField = longitudeResult.getSelectedFields().findFirst();
 
-        if (!latitudeField.isPresent() || !longitudeField.isPresent()) {
+        if (latitudeField.isEmpty() || longitudeField.isEmpty()) {
             return null;
         }
 
@@ -466,21 +468,18 @@ public class GeohashRecord extends AbstractProcessor {
         double realLongValue = Double.parseDouble(longitudeVal.toString());
         GeoHash gh = GeoHash.withCharacterPrecision(realLatValue, realLongValue, level);
 
-        switch (format) {
-            case BINARY:
-                return gh.toBinaryString();
-            case LONG:
-                return gh.longValue();
-            default:
-                return gh.toBase32();
-        }
+        return switch (format) {
+            case BINARY -> gh.toBinaryString();
+            case LONG -> gh.longValue();
+            default -> gh.toBase32();
+        };
     }
 
     private WGS84Point getDecodedPointFromGeohash(RecordPath geohashPath, Record record, GeohashFormat format) {
         RecordPathResult geohashResult = geohashPath.evaluate(record);
         Optional<FieldValue> geohashField = geohashResult.getSelectedFields().findFirst();
 
-        if (!geohashField.isPresent()) {
+        if (geohashField.isEmpty()) {
             return null;
         }
 
@@ -491,19 +490,14 @@ public class GeohashRecord extends AbstractProcessor {
         }
 
         String geohashString = geohashVal.toString();
-        GeoHash decodedHash;
-
-        switch (format) {
-            case BINARY:
-                decodedHash = GeoHash.fromBinaryString(geohashString);
-                break;
-            case LONG:
+        GeoHash decodedHash = switch (format) {
+            case BINARY -> GeoHash.fromBinaryString(geohashString);
+            case LONG -> {
                 String binaryString = Long.toBinaryString(Long.parseLong(geohashString));
-                decodedHash = GeoHash.fromBinaryString(binaryString);
-                break;
-            default:
-                decodedHash = GeoHash.fromGeohashString(geohashString);
-        }
+                yield GeoHash.fromBinaryString(binaryString);
+            }
+            default -> GeoHash.fromGeohashString(geohashString);
+        };
 
         return decodedHash.getBoundingBoxCenter();
     }
@@ -516,13 +510,13 @@ public class GeohashRecord extends AbstractProcessor {
         RecordPathResult result = path.evaluate(record);
 
         final Optional<FieldValue> fieldValueOption = result.getSelectedFields().findFirst();
-        if (!fieldValueOption.isPresent()) {
+        if (fieldValueOption.isEmpty()) {
             return false;
         }
 
         final FieldValue fieldValue = fieldValueOption.get();
 
-        if (!fieldValue.getParent().isPresent() || fieldValue.getParent().get().getValue() == null) {
+        if (fieldValue.getParent().isEmpty() || fieldValue.getParent().get().getValue() == null) {
             return false;
         }
 
