@@ -81,10 +81,7 @@ import org.apache.nifi.processors.standard.util.ProxyAuthenticator;
 import org.apache.nifi.processors.standard.util.SoftLimitBoundedByteArrayOutputStream;
 import org.apache.nifi.proxy.ProxyConfiguration;
 import org.apache.nifi.proxy.ProxySpec;
-import org.apache.nifi.security.util.SslContextFactory;
-import org.apache.nifi.security.util.TlsConfiguration;
-import org.apache.nifi.security.util.TlsException;
-import org.apache.nifi.ssl.SSLContextService;
+import org.apache.nifi.ssl.SSLContextProvider;
 import org.apache.nifi.stream.io.StreamUtils;
 
 import javax.annotation.Nullable;
@@ -109,13 +106,11 @@ import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
@@ -177,7 +172,7 @@ public class InvokeHTTP extends AbstractProcessor {
     private static final Pattern FORM_DATA_NAME_PARAMETER_PATTERN = Pattern.compile("post:form:(?<formDataName>.*)$");
     private static final String FORM_DATA_NAME_GROUP = "formDataName";
 
-    private static final Set<String> IGNORED_REQUEST_ATTRIBUTES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    private static final Set<String> IGNORED_REQUEST_ATTRIBUTES = Set.of(
             STATUS_CODE,
             STATUS_MESSAGE,
             RESPONSE_BODY,
@@ -189,7 +184,7 @@ public class InvokeHTTP extends AbstractProcessor {
             EXCEPTION_MESSAGE,
             CoreAttributes.UUID.key(),
             CoreAttributes.PATH.key()
-    )));
+    );
 
     public static final PropertyDescriptor HTTP_METHOD = new PropertyDescriptor.Builder()
             .name("HTTP Method")
@@ -222,7 +217,7 @@ public class InvokeHTTP extends AbstractProcessor {
             .name("SSL Context Service")
             .description("SSL Context Service provides trusted certificates and client certificates for TLS communication.")
             .required(false)
-            .identifiesControllerService(SSLContextService.class)
+            .identifiesControllerService(SSLContextProvider.class)
             .build();
 
     public static final PropertyDescriptor SOCKET_CONNECT_TIMEOUT = new PropertyDescriptor.Builder()
@@ -345,7 +340,7 @@ public class InvokeHTTP extends AbstractProcessor {
             .name("Request Content-Encoding")
             .description("HTTP Content-Encoding applied to request body during transmission. The receiving server must support the selected encoding to avoid request failures.")
             .required(true)
-            .defaultValue(ContentEncodingStrategy.DISABLED.getValue())
+            .defaultValue(ContentEncodingStrategy.DISABLED)
             .allowableValues(ContentEncodingStrategy.class)
             .dependsOn(HTTP_METHOD, HttpMethod.PATCH.name(), HttpMethod.POST.name(), HttpMethod.PUT.name())
             .build();
@@ -459,10 +454,20 @@ public class InvokeHTTP extends AbstractProcessor {
 
     public static final PropertyDescriptor RESPONSE_HEADER_REQUEST_ATTRIBUTES_ENABLED = new PropertyDescriptor.Builder()
             .name("Response Header Request Attributes Enabled")
-            .description("Enable adding HTTP response headers as attributes to FlowFiles transferred to the Original relationship.")
+            .description("Enable adding HTTP response headers as attributes to FlowFiles transferred to the Original, Retry or No Retry relationships.")
             .required(false)
             .defaultValue(Boolean.FALSE.toString())
             .allowableValues(Boolean.TRUE.toString(), Boolean.FALSE.toString())
+            .build();
+
+    public static final PropertyDescriptor RESPONSE_HEADER_REQUEST_ATTRIBUTES_PREFIX = new PropertyDescriptor.Builder()
+            .name("Response Header Request Attributes Prefix")
+            .description("Prefix to HTTP response headers when included as attributes to FlowFiles transferred to the Original, Retry or No Retry relationships.  "
+                + "It is recommended to end with a separator character like '.' or '-'.")
+            .required(false)
+            .expressionLanguageSupported(ExpressionLanguageScope.FLOWFILE_ATTRIBUTES)
+            .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
+            .dependsOn(RESPONSE_HEADER_REQUEST_ATTRIBUTES_ENABLED, Boolean.TRUE.toString())
             .build();
 
     public static final PropertyDescriptor RESPONSE_REDIRECTS_ENABLED = new PropertyDescriptor.Builder()
@@ -476,9 +481,9 @@ public class InvokeHTTP extends AbstractProcessor {
 
     private static final ProxySpec[] PROXY_SPECS = {ProxySpec.HTTP_AUTH, ProxySpec.SOCKS};
 
-    private static final PropertyDescriptor PROXY_CONFIGURATION_SERVICE = ProxyConfiguration.createProxyConfigPropertyDescriptor(true, PROXY_SPECS);
+    private static final PropertyDescriptor PROXY_CONFIGURATION_SERVICE = ProxyConfiguration.createProxyConfigPropertyDescriptor(PROXY_SPECS);
 
-    public static final List<PropertyDescriptor> PROPERTIES = List.of(
+    public static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
             HTTP_METHOD,
             HTTP_URL,
             HTTP2_DISABLED,
@@ -512,6 +517,7 @@ public class InvokeHTTP extends AbstractProcessor {
             RESPONSE_GENERATION_REQUIRED,
             RESPONSE_FLOW_FILE_NAMING_STRATEGY,
             RESPONSE_HEADER_REQUEST_ATTRIBUTES_ENABLED,
+            RESPONSE_HEADER_REQUEST_ATTRIBUTES_PREFIX,
             RESPONSE_REDIRECTS_ENABLED
     );
 
@@ -565,7 +571,7 @@ public class InvokeHTTP extends AbstractProcessor {
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return PROPERTIES;
+        return PROPERTY_DESCRIPTORS;
     }
 
     @Override
@@ -656,7 +662,7 @@ public class InvokeHTTP extends AbstractProcessor {
             } else if (oldValue == null) {    // new property
                 newDynamicPropertyNames.add(descriptor.getName());
             }
-            this.dynamicPropertyNames = Collections.unmodifiableSet(newDynamicPropertyNames);
+            this.dynamicPropertyNames = Set.copyOf(newDynamicPropertyNames);
         } else {
             // compile the attributes-to-send filter pattern
             if (REQUEST_HEADER_ATTRIBUTES_PATTERN.getName().equalsIgnoreCase(descriptor.getName())) {
@@ -729,7 +735,7 @@ public class InvokeHTTP extends AbstractProcessor {
     }
 
     @OnScheduled
-    public void setUpClient(final ProcessContext context) throws TlsException, IOException {
+    public void setUpClient(final ProcessContext context) throws IOException {
         okHttpClientAtomicReference.set(null);
 
         OkHttpClient.Builder okHttpClientBuilder = new OkHttpClient().newBuilder();
@@ -753,7 +759,7 @@ public class InvokeHTTP extends AbstractProcessor {
         }
 
         if (context.getProperty(HTTP2_DISABLED).asBoolean()) {
-            okHttpClientBuilder.protocols(Collections.singletonList(Protocol.HTTP_1_1));
+            okHttpClientBuilder.protocols(List.of(Protocol.HTTP_1_1));
         }
 
         okHttpClientBuilder.followRedirects(context.getProperty(RESPONSE_REDIRECTS_ENABLED).asBoolean());
@@ -767,12 +773,11 @@ public class InvokeHTTP extends AbstractProcessor {
                 )
         );
 
-        final SSLContextService sslService = context.getProperty(SSL_CONTEXT_SERVICE).asControllerService(SSLContextService.class);
-        if (sslService != null) {
-            final SSLContext sslContext = sslService.createContext();
+        final SSLContextProvider sslContextProvider = context.getProperty(SSL_CONTEXT_SERVICE).asControllerService(SSLContextProvider.class);
+        if (sslContextProvider != null) {
+            final SSLContext sslContext = sslContextProvider.createContext();
             final SSLSocketFactory socketFactory = sslContext.getSocketFactory();
-            final TlsConfiguration tlsConfiguration = sslService.createTlsConfiguration();
-            final X509TrustManager trustManager = Objects.requireNonNull(SslContextFactory.getX509TrustManager(tlsConfiguration), "Trust Manager not found");
+            final X509TrustManager trustManager = sslContextProvider.createTrustManager();
             okHttpClientBuilder.sslSocketFactory(socketFactory, trustManager);
         }
 
@@ -855,7 +860,6 @@ public class InvokeHTTP extends AbstractProcessor {
             final String urlProperty = trimToEmpty(context.getProperty(HTTP_URL).evaluateAttributeExpressions(requestFlowFile).getValue());
 
             Request httpRequest = configureRequest(context, session, requestFlowFile, urlProperty);
-            logRequest(logger, httpRequest);
 
             if (httpRequest.body() != null) {
                 session.getProvenanceReporter().send(requestFlowFile, urlProperty, true);
@@ -863,11 +867,12 @@ public class InvokeHTTP extends AbstractProcessor {
 
             final long startNanos = System.nanoTime();
 
+            logger.debug("Request [{}] {} {} starting", txId, httpRequest.method(), httpRequest.url());
             try (Response responseHttp = okHttpClient.newCall(httpRequest).execute()) {
-                logResponse(logger, urlProperty, responseHttp);
+                final int statusCode = responseHttp.code();
+                logger.info("Request [{}] {} {} HTTP {} [{}]", txId, httpRequest.method(), httpRequest.url(), statusCode, responseHttp.protocol());
 
                 // store the status code and message
-                int statusCode = responseHttp.code();
                 String statusMessage = responseHttp.message();
 
                 // Create a map of the status attributes that are always written to the request and response FlowFiles
@@ -881,13 +886,6 @@ public class InvokeHTTP extends AbstractProcessor {
 
                 if (requestFlowFile != null) {
                     requestFlowFile = session.putAllAttributes(requestFlowFile, statusAttributes);
-                }
-
-                // If the property to add the response headers to the request flowfile is true then add them
-                if (context.getProperty(RESPONSE_HEADER_REQUEST_ATTRIBUTES_ENABLED).asBoolean() && requestFlowFile != null) {
-                    // write the response headers as attributes
-                    // this will overwrite any existing flowfile attributes
-                    requestFlowFile = session.putAllAttributes(requestFlowFile, convertAttributesFromHeaders(responseHttp));
                 }
 
                 boolean outputBodyToRequestAttribute = (!isSuccess(statusCode) || putToAttribute) && requestFlowFile != null;
@@ -923,7 +921,7 @@ public class InvokeHTTP extends AbstractProcessor {
 
                         // write the response headers as attributes
                         // this will overwrite any existing flowfile attributes
-                        responseFlowFile = session.putAllAttributes(responseFlowFile, convertAttributesFromHeaders(responseHttp));
+                        responseFlowFile = session.putAllAttributes(responseFlowFile, convertAttributesFromHeaders(responseHttp, ""));
 
                         // update FlowFile's filename attribute with an extracted value from the remote URL
                         if (FlowFileNamingStrategy.URL_PATH.equals(getFlowFileNamingStrategy(context)) && HttpMethod.GET.name().equals(httpRequest.method())) {
@@ -992,6 +990,16 @@ public class InvokeHTTP extends AbstractProcessor {
                     }
                 }
 
+                // This needs to be done after the response flowFile has been created from the request flowFile
+                // as the added attribute headers may have a prefix added that doesn't make sense for the response flowFile.
+                if (context.getProperty(RESPONSE_HEADER_REQUEST_ATTRIBUTES_ENABLED).asBoolean() && requestFlowFile != null) {
+                    final String prefix = context.getProperty(RESPONSE_HEADER_REQUEST_ATTRIBUTES_PREFIX).evaluateAttributeExpressions(requestFlowFile).getValue();
+
+                    // write the response headers as attributes
+                    // this will overwrite any existing flowfile attributes
+                    requestFlowFile = session.putAllAttributes(requestFlowFile, convertAttributesFromHeaders(responseHttp, prefix));
+                }
+
                 route(requestFlowFile, responseFlowFile, session, context, statusCode);
 
             }
@@ -1033,8 +1041,8 @@ public class InvokeHTTP extends AbstractProcessor {
             }
         }
 
-        final String contentEncoding = context.getProperty(REQUEST_CONTENT_ENCODING).getValue();
-        final ContentEncodingStrategy contentEncodingStrategy = ContentEncodingStrategy.valueOf(contentEncoding);
+        final ContentEncodingStrategy contentEncodingStrategy =
+                context.getProperty(REQUEST_CONTENT_ENCODING).asAllowableValue(ContentEncodingStrategy.class);
         if (ContentEncodingStrategy.GZIP == contentEncodingStrategy) {
             requestBuilder.addHeader(HttpHeader.CONTENT_ENCODING.getHeader(), ContentEncodingStrategy.GZIP.getValue().toLowerCase());
         }
@@ -1111,7 +1119,7 @@ public class InvokeHTTP extends AbstractProcessor {
             }
         };
 
-        if (propertyDescriptors.size() > 0 || StringUtils.isNotEmpty(formDataName)) {
+        if (!propertyDescriptors.isEmpty() || StringUtils.isNotEmpty(formDataName)) {
             // we have form data
             MultipartBody.Builder builder = new Builder().setType(MultipartBody.FORM);
             boolean useFileName = context.getProperty(REQUEST_FORM_DATA_FILENAME_ENABLED).asBoolean();
@@ -1225,45 +1233,14 @@ public class InvokeHTTP extends AbstractProcessor {
         return statusCode / 100 == 2;
     }
 
-    private void logRequest(ComponentLog logger, Request request) {
-        if (logger.isDebugEnabled()) {
-            logger.debug("\nRequest to remote service:\n\t{}\n{}",
-                    request.url().url().toExternalForm(), getLogString(request.headers().toMultimap()));
-        }
-    }
-
-    private void logResponse(ComponentLog logger, String url, Response response) {
-        if (logger.isDebugEnabled()) {
-            logger.debug("\nResponse from remote service:\n\t{}\n{}",
-                    url, getLogString(response.headers().toMultimap()));
-        }
-    }
-
-    private String getLogString(Map<String, List<String>> map) {
-        StringBuilder sb = new StringBuilder();
-        for (Map.Entry<String, List<String>> entry : map.entrySet()) {
-            List<String> list = entry.getValue();
-            if (!list.isEmpty()) {
-                sb.append("\t");
-                sb.append(entry.getKey());
-                sb.append(": ");
-                if (list.size() == 1) {
-                    sb.append(list.get(0));
-                } else {
-                    sb.append(list);
-                }
-                sb.append("\n");
-            }
-        }
-        return sb.toString();
-    }
-
     /**
      * Returns a Map of flowfile attributes from the response http headers. Multivalue headers are naively converted to comma separated strings.
+     * Prefix is passed in to allow differentiation for these new attributes.
      */
-    private Map<String, String> convertAttributesFromHeaders(final Response responseHttp) {
+    private Map<String, String> convertAttributesFromHeaders(final Response responseHttp, final String prefix) {
         // create a new hashmap to store the values from the connection
         final Map<String, String> attributes = new HashMap<>();
+        final String trimmedPrefix = trimToEmpty(prefix);
         final Headers headers = responseHttp.headers();
         headers.names().forEach((key) -> {
             final List<String> values = headers.values(key);
@@ -1271,7 +1248,7 @@ public class InvokeHTTP extends AbstractProcessor {
             if (!values.isEmpty()) {
                 // create a comma separated string from the values, this is stored in the map
                 final String value = StringUtils.join(values, MULTIPLE_HEADER_DELIMITER);
-                attributes.put(key, value);
+                attributes.put(trimmedPrefix + key, value);
             }
         });
 
