@@ -16,20 +16,6 @@
  */
 package org.apache.nifi.processors.standard;
 
-import static java.util.Collections.singletonMap;
-
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicLong;
 import org.apache.nifi.annotation.behavior.InputRequirement;
 import org.apache.nifi.annotation.behavior.InputRequirement.Requirement;
 import org.apache.nifi.annotation.behavior.SideEffectFree;
@@ -54,10 +40,21 @@ import org.apache.nifi.logging.ComponentLog;
 import org.apache.nifi.processor.AbstractProcessor;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
-import org.apache.nifi.processor.ProcessorInitializationContext;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.processor.util.StandardValidators;
+
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicLong;
+
+import static java.util.Collections.singletonMap;
 
 @SideEffectFree
 @TriggerSerially
@@ -165,6 +162,18 @@ public class MonitorActivity extends AbstractProcessor {
             .defaultValue(REPORT_NODE_ALL.getValue())
             .build();
 
+    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
+            THRESHOLD,
+            CONTINUALLY_SEND_MESSAGES,
+            INACTIVITY_MESSAGE,
+            ACTIVITY_RESTORED_MESSAGE,
+            WAIT_FOR_ACTIVITY,
+            RESET_STATE_ON_RESTART,
+            COPY_ATTRIBUTES,
+            MONITORING_SCOPE,
+            REPORTING_NODE
+    );
+
     public static final Relationship REL_SUCCESS = new Relationship.Builder()
             .name("success")
             .description("All incoming FlowFiles are routed to success")
@@ -180,45 +189,27 @@ public class MonitorActivity extends AbstractProcessor {
                     + "period of inactivity")
             .build();
 
-    private List<PropertyDescriptor> properties;
-    private Set<Relationship> relationships;
+    private final static Set<Relationship> RELATIONSHIPS = Set.of(
+            REL_SUCCESS,
+            REL_INACTIVE,
+            REL_ACTIVITY_RESTORED
+    );
 
     private final AtomicBoolean connectedWhenLastTriggered = new AtomicBoolean(false);
     private final AtomicLong lastInactiveMessage = new AtomicLong();
-    private final AtomicLong inactivityStartMillis = new AtomicLong(System.currentTimeMillis());
+    private final AtomicLong inactivityStartMillis = new AtomicLong(nowMillis());
     private final AtomicBoolean wasActive = new AtomicBoolean(true);
 
     private volatile LocalFlowActivityInfo localFlowActivityInfo;
 
     @Override
-    protected void init(final ProcessorInitializationContext context) {
-        final List<PropertyDescriptor> properties = new ArrayList<>();
-        properties.add(THRESHOLD);
-        properties.add(CONTINUALLY_SEND_MESSAGES);
-        properties.add(INACTIVITY_MESSAGE);
-        properties.add(ACTIVITY_RESTORED_MESSAGE);
-        properties.add(WAIT_FOR_ACTIVITY);
-        properties.add(RESET_STATE_ON_RESTART);
-        properties.add(COPY_ATTRIBUTES);
-        properties.add(MONITORING_SCOPE);
-        properties.add(REPORTING_NODE);
-        this.properties = Collections.unmodifiableList(properties);
-
-        final Set<Relationship> relationships = new HashSet<>();
-        relationships.add(REL_SUCCESS);
-        relationships.add(REL_INACTIVE);
-        relationships.add(REL_ACTIVITY_RESTORED);
-        this.relationships = Collections.unmodifiableSet(relationships);
-    }
-
-    @Override
     public Set<Relationship> getRelationships() {
-        return relationships;
+        return RELATIONSHIPS;
     }
 
     @Override
     protected List<PropertyDescriptor> getSupportedPropertyDescriptors() {
-        return properties;
+        return PROPERTY_DESCRIPTORS;
     }
 
     @OnScheduled
@@ -277,7 +268,7 @@ public class MonitorActivity extends AbstractProcessor {
             final boolean firstKnownTransfer = !localFlowActivityInfo.hasSuccessfulTransfer();
             final boolean flowStateMustBecomeActive = !wasActive || firstKnownTransfer;
 
-            localFlowActivityInfo.update(flowFiles.get(0));
+            localFlowActivityInfo.update(flowFiles.getFirst());
 
             if (isClusterScope && flowStateMustBecomeActive) {
                 localFlowActivityInfo.forceSync();
@@ -303,7 +294,7 @@ public class MonitorActivity extends AbstractProcessor {
         final boolean isActive = localFlowActivityInfo.isActive() || !flowFiles.isEmpty();
         final long lastActivity = localFlowActivityInfo.getLastActivity();
         final long inactivityStartMillis = this.inactivityStartMillis.get();
-        final boolean timeToRepeatInactiveMessage = (lastInactiveMessage.get() + thresholdMillis) <= System.currentTimeMillis();
+        final boolean timeToRepeatInactiveMessage = (lastInactiveMessage.get() + thresholdMillis) <= nowMillis();
 
         final boolean canReport = !isClusterScope || isConnectedToCluster || !flowFiles.isEmpty();
         final boolean canChangeState = !waitForActivity || localFlowActivityInfo.hasSuccessfulTransfer();
@@ -323,8 +314,12 @@ public class MonitorActivity extends AbstractProcessor {
         }
     }
 
-    protected long getStartupTime() {
+    protected long nowMillis() {
         return System.currentTimeMillis();
+    }
+
+    protected long getStartupTime() {
+        return nowMillis();
     }
 
     protected final long getLastSuccessfulTransfer() {
@@ -371,7 +366,7 @@ public class MonitorActivity extends AbstractProcessor {
         if (shouldThisNodeReport) {
             sendInactivityMarker(context, session, lastActivity, logger);
         }
-        lastInactiveMessage.set(System.currentTimeMillis());
+        lastInactiveMessage.set(nowMillis());
         setInactivityFlag(context.getStateManager());
     }
 
@@ -459,7 +454,7 @@ public class MonitorActivity extends AbstractProcessor {
         inactiveFlowFile = session.putAttribute(
                 inactiveFlowFile,
                 "inactivityDurationMillis",
-                String.valueOf(System.currentTimeMillis() - inactivityStartMillis)
+                String.valueOf(nowMillis() - inactivityStartMillis)
         );
 
         final byte[] outBytes = context.getProperty(INACTIVITY_MESSAGE).evaluateAttributeExpressions(inactiveFlowFile).getValue().getBytes(
@@ -480,7 +475,8 @@ public class MonitorActivity extends AbstractProcessor {
 
         activityRestoredFlowFile = session.putAttribute(activityRestoredFlowFile, "inactivityStartMillis", String.valueOf(
                 inactivityStartMillis));
-        activityRestoredFlowFile = session.putAttribute(activityRestoredFlowFile, "inactivityDurationMillis", String.valueOf(System.currentTimeMillis() - inactivityStartMillis));
+        activityRestoredFlowFile = session.putAttribute(activityRestoredFlowFile, "inactivityDurationMillis", String.valueOf(
+                nowMillis() - inactivityStartMillis));
 
         final byte[] outBytes = context.getProperty(ACTIVITY_RESTORED_MESSAGE).evaluateAttributeExpressions(activityRestoredFlowFile).getValue().getBytes(
                 StandardCharsets.UTF_8);
@@ -491,12 +487,14 @@ public class MonitorActivity extends AbstractProcessor {
         logger.info("Transferred {} to 'activity.restored'", activityRestoredFlowFile);
     }
 
-    private static class LocalFlowActivityInfo {
+    private class LocalFlowActivityInfo {
         private static final long NO_VALUE = 0;
+        private static final int TIMES_SYNC_WITHIN_THRESHOLD = 3;
 
         private final long startupTimeMillis;
         private final long thresholdMillis;
         private final boolean saveAttributes;
+        private final long syncPeriodMillis;
 
         private long nextSyncMillis = NO_VALUE;
         private long lastSuccessfulTransfer = NO_VALUE;
@@ -506,6 +504,7 @@ public class MonitorActivity extends AbstractProcessor {
             this.startupTimeMillis = startupTimeMillis;
             this.thresholdMillis = thresholdMillis;
             this.saveAttributes = saveAttributes;
+            this.syncPeriodMillis = thresholdMillis / TIMES_SYNC_WITHIN_THRESHOLD;
         }
 
         public LocalFlowActivityInfo(long startupTimeMillis, long thresholdMillis, boolean saveAttributes, long initialLastSuccessfulTransfer) {
@@ -514,22 +513,22 @@ public class MonitorActivity extends AbstractProcessor {
         }
 
         public boolean syncNeeded() {
-            return nextSyncMillis <= System.currentTimeMillis();
+            return nextSyncMillis <= nowMillis();
         }
 
         public void setNextSyncMillis() {
-            nextSyncMillis = System.currentTimeMillis() + (thresholdMillis / 3);
+            nextSyncMillis = nowMillis() + syncPeriodMillis;
         }
 
         public void forceSync() {
-            nextSyncMillis = System.currentTimeMillis();
+            nextSyncMillis = nowMillis();
         }
 
         public boolean isActive() {
             if (hasSuccessfulTransfer()) {
-                return System.currentTimeMillis() < (lastSuccessfulTransfer + thresholdMillis);
+                return nowMillis() < (lastSuccessfulTransfer + thresholdMillis);
             } else {
-                return System.currentTimeMillis() < (startupTimeMillis + thresholdMillis);
+                return nowMillis() < (startupTimeMillis + thresholdMillis);
             }
         }
 
@@ -554,7 +553,11 @@ public class MonitorActivity extends AbstractProcessor {
         }
 
         public void update(FlowFile flowFile) {
-            this.lastSuccessfulTransfer = System.currentTimeMillis();
+            final long now = nowMillis();
+            if ((now - this.getLastActivity()) > syncPeriodMillis) {
+                this.forceSync(); // Immediate synchronization if Flow Files are infrequent, to mitigate false reports
+            }
+            this.lastSuccessfulTransfer = now;
             if (saveAttributes) {
                 lastSuccessfulTransferAttributes = new HashMap<>(flowFile.getAttributes());
                 lastSuccessfulTransferAttributes.remove(CoreAttributes.UUID.key());
