@@ -33,6 +33,7 @@ import org.apache.nifi.components.ValidationResult;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
 import org.apache.nifi.flowfile.attributes.StandardFlowFileMediaType;
 import org.apache.nifi.processor.ProcessContext;
+import org.apache.nifi.processor.util.bin.InsertionLocation;
 import org.apache.nifi.processors.standard.merge.AttributeStrategyUtil;
 import org.apache.nifi.util.MockFlowFile;
 import org.apache.nifi.util.MockProcessContext;
@@ -45,8 +46,10 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -81,10 +84,10 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 1);
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
-        assertEquals(runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0).getAttribute(CoreAttributes.UUID.key()),
-                runner.getFlowFilesForRelationship(MergeContent.REL_ORIGINAL).get(0).getAttribute(MergeContent.MERGE_UUID_ATTRIBUTE));
+        assertEquals(runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst().getAttribute(CoreAttributes.UUID.key()),
+                runner.getFlowFilesForRelationship(MergeContent.REL_ORIGINAL).getFirst().getAttribute(MergeContent.MERGE_UUID_ATTRIBUTE));
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         assertEquals(1024 * 6, bundle.getSize());
 
         // Queue should not be empty because the first FlowFile will be transferred back to the input queue
@@ -130,7 +133,7 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/avro-binary");
 
         // create a reader for the merged content
@@ -180,7 +183,7 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 1);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/avro-binary");
 
         final byte[] data = runner.getContentAsByteArray(bundle);
@@ -189,7 +192,7 @@ public class TestMergeContent {
         assertTrue(users.containsKey("Alyssa"));
         assertTrue(users.containsKey("John"));
 
-        final MockFlowFile failure = runner.getFlowFilesForRelationship(MergeContent.REL_FAILURE).get(0);
+        final MockFlowFile failure = runner.getFlowFilesForRelationship(MergeContent.REL_FAILURE).getFirst();
         final byte[] failureData = runner.getContentAsByteArray(failure);
         final Map<String, GenericRecord> places = getGenericRecordMap(failureData, schema2, "name");
         assertEquals(1, places.size());
@@ -209,26 +212,19 @@ public class TestMergeContent {
         final GenericRecord user1 = new GenericData.Record(schema);
         user1.put("name", "Alyssa");
         user1.put("favorite_number", 256);
-        final Map<String, String> userMeta1 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 1");
-        }};
+        final Map<String, String> userMeta1 = Map.of("test_metadata1", "Test 1");
 
         final GenericRecord user2 = new GenericData.Record(schema);
         user2.put("name", "Ben");
         user2.put("favorite_number", 7);
         user2.put("favorite_color", "red");
-        final Map<String, String> userMeta2 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 2"); // Test non-matching values
-        }};
+        final Map<String, String> userMeta2 = Map.of("test_metadata1", "Test 2"); // Test non-matching values
 
         final GenericRecord user3 = new GenericData.Record(schema);
         user3.put("name", "John");
         user3.put("favorite_number", 5);
         user3.put("favorite_color", "blue");
-        final Map<String, String> userMeta3 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 1");
-            put("test_metadata2", "Test"); // Test unique
-        }};
+        final Map<String, String> userMeta3 = Map.of("test_metadata1", "Test 1", "test_metadata2", "Test"); // Test unique
 
         final DatumWriter<GenericRecord> datumWriter = new GenericDatumWriter<>(schema);
         final ByteArrayOutputStream out1 = serializeAvroRecord(schema, user1, datumWriter, userMeta1);
@@ -245,7 +241,7 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 2);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/avro-binary");
 
         // create a reader for the merged content
@@ -269,26 +265,19 @@ public class TestMergeContent {
         final GenericRecord user1 = new GenericData.Record(schema);
         user1.put("name", "Alyssa");
         user1.put("favorite_number", 256);
-        final Map<String, String> userMeta1 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 1");
-        }};
+        final Map<String, String> userMeta1 = Map.of("test_metadata1", "Test 1");
 
         final GenericRecord user2 = new GenericData.Record(schema);
         user2.put("name", "Ben");
         user2.put("favorite_number", 7);
         user2.put("favorite_color", "red");
-        final Map<String, String> userMeta2 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 2"); // Test non-matching values
-        }};
+        final Map<String, String> userMeta2 = Map.of("test_metadata1", "Test 2"); // Test non-matching values
 
         final GenericRecord user3 = new GenericData.Record(schema);
         user3.put("name", "John");
         user3.put("favorite_number", 5);
         user3.put("favorite_color", "blue");
-        final Map<String, String> userMeta3 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 1");
-            put("test_metadata2", "Test"); // Test unique
-        }};
+        final Map<String, String> userMeta3 = Map.of("test_metadata1", "Test 1", "test_metadata2", "Test"); // Test unique
 
         final DatumWriter<GenericRecord> datumWriter = new GenericDatumWriter<>(schema);
         final ByteArrayOutputStream out1 = serializeAvroRecord(schema, user1, datumWriter, userMeta1);
@@ -305,7 +294,7 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/avro-binary");
 
         // create a reader for the merged content
@@ -331,26 +320,19 @@ public class TestMergeContent {
         final GenericRecord user1 = new GenericData.Record(schema);
         user1.put("name", "Alyssa");
         user1.put("favorite_number", 256);
-        final Map<String, String> userMeta1 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 1");
-        }};
+        final Map<String, String> userMeta1 = Map.of("test_metadata1", "Test 1");
 
         final GenericRecord user2 = new GenericData.Record(schema);
         user2.put("name", "Ben");
         user2.put("favorite_number", 7);
         user2.put("favorite_color", "red");
-        final Map<String, String> userMeta2 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 2"); // Test non-matching values
-        }};
+        final Map<String, String> userMeta2 = Map.of("test_metadata1", "Test 2"); // Test non-matching values
 
         final GenericRecord user3 = new GenericData.Record(schema);
         user3.put("name", "John");
         user3.put("favorite_number", 5);
         user3.put("favorite_color", "blue");
-        final Map<String, String> userMeta3 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 1");
-            put("test_metadata2", "Test"); // Test unique
-        }};
+        final Map<String, String> userMeta3 = Map.of("test_metadata1", "Test 1", "test_metadata2", "Test"); // Test unique
 
         final DatumWriter<GenericRecord> datumWriter = new GenericDatumWriter<>(schema);
         final ByteArrayOutputStream out1 = serializeAvroRecord(schema, user1, datumWriter, userMeta1);
@@ -367,7 +349,7 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/avro-binary");
 
         // create a reader for the merged content
@@ -393,26 +375,19 @@ public class TestMergeContent {
         final GenericRecord user1 = new GenericData.Record(schema);
         user1.put("name", "Alyssa");
         user1.put("favorite_number", 256);
-        final Map<String, String> userMeta1 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 1");
-        }};
+        final Map<String, String> userMeta1 = Map.of("test_metadata1", "Test 1");
 
         final GenericRecord user2 = new GenericData.Record(schema);
         user2.put("name", "Ben");
         user2.put("favorite_number", 7);
         user2.put("favorite_color", "red");
-        final Map<String, String> userMeta2 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 2"); // Test non-matching values
-        }};
+        final Map<String, String> userMeta2 = Map.of("test_metadata1", "Test 2"); // Test non-matching values
 
         final GenericRecord user3 = new GenericData.Record(schema);
         user3.put("name", "John");
         user3.put("favorite_number", 5);
         user3.put("favorite_color", "blue");
-        final Map<String, String> userMeta3 = new HashMap<String, String>() {{
-            put("test_metadata1", "Test 1");
-            put("test_metadata2", "Test"); // Test unique
-        }};
+        final Map<String, String> userMeta3 = Map.of("test_metadata1", "Test 1", "test_metadata2", "Test"); // Test unique
 
         final DatumWriter<GenericRecord> datumWriter = new GenericDatumWriter<>(schema);
         final ByteArrayOutputStream out1 = serializeAvroRecord(schema, user1, datumWriter, userMeta1);
@@ -429,7 +404,7 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 1);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/avro-binary");
 
         // create a reader for the merged content
@@ -486,11 +461,11 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        bundle.assertContentEquals("Hello, World!".getBytes("UTF-8"));
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        bundle.assertContentEquals("Hello, World!".getBytes(StandardCharsets.UTF_8));
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/plain-text");
 
-        runner.getFlowFilesForRelationship(MergeContent.REL_ORIGINAL).stream().forEach(
+        runner.getFlowFilesForRelationship(MergeContent.REL_ORIGINAL).forEach(
                 ff -> assertEquals(bundle.getAttribute(CoreAttributes.UUID.key()), ff.getAttribute(MergeContent.MERGE_UUID_ATTRIBUTE)));
     }
 
@@ -509,7 +484,7 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         bundle.assertContentEquals("Hello, World!");
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/plain-text");
     }
@@ -532,8 +507,8 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        bundle.assertContentEquals("@Hello#, #World!$".getBytes("UTF-8"));
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        bundle.assertContentEquals("@Hello#, #World!$".getBytes(StandardCharsets.UTF_8));
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/plain-text");
     }
 
@@ -553,13 +528,13 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        bundle.assertContentEquals("@Hello, World!".getBytes("UTF-8"));
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        bundle.assertContentEquals("@Hello, World!".getBytes(StandardCharsets.UTF_8));
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/plain-text");
     }
 
     @Test
-    public void testSimpleBinaryConcatWithFileDelimiters() throws IOException, InterruptedException {
+    public void testSimpleBinaryConcatWithFileDelimiters() throws IOException {
         final TestRunner runner = TestRunners.newTestRunner(new MergeContent());
         runner.setProperty(MergeContent.MAX_BIN_AGE, "1 sec");
         runner.setProperty(MergeContent.MERGE_FORMAT, MergeContent.MERGE_FORMAT_CONCAT);
@@ -575,9 +550,9 @@ public class TestMergeContent {
         attributes.put("demarcator", "src/test/resources/TestMergeContent/demarcate");
         attributes.put("footer", "src/test/resources/TestMergeContent/foot");
 
-        runner.enqueue("Hello".getBytes("UTF-8"), attributes);
-        runner.enqueue(", ".getBytes("UTF-8"), attributes);
-        runner.enqueue("World!".getBytes("UTF-8"), attributes);
+        runner.enqueue("Hello".getBytes(StandardCharsets.UTF_8), attributes);
+        runner.enqueue(", ".getBytes(StandardCharsets.UTF_8), attributes);
+        runner.enqueue("World!".getBytes(StandardCharsets.UTF_8), attributes);
         runner.run(2);
 
         runner.assertQueueEmpty();
@@ -585,8 +560,8 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        bundle.assertContentEquals("(|)Hello***, ***World!___".getBytes("UTF-8"));
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        bundle.assertContentEquals("(|)Hello***, ***World!___".getBytes(StandardCharsets.UTF_8));
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/plain-text");
     }
 
@@ -631,8 +606,7 @@ public class TestMergeContent {
 
         Collection<ValidationResult> results = new HashSet<>();
         ProcessContext context = runner.getProcessContext();
-        if (context instanceof MockProcessContext) {
-            MockProcessContext mockContext = (MockProcessContext) context;
+        if (context instanceof MockProcessContext mockContext) {
             results = mockContext.validate();
         }
 
@@ -662,7 +636,7 @@ public class TestMergeContent {
 
         assertEquals(3, results.size());
         for (ValidationResult vr : results) {
-            assertTrue(vr.toString().contains("is invalid because File " + new File(doesNotExistFile).toString() + " does not exist"));
+            assertTrue(vr.toString().contains("is invalid because File " + new File(doesNotExistFile) + " does not exist"));
         }
     }
 
@@ -684,8 +658,8 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 4);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        bundle.assertContentEquals("Hello, World!".getBytes("UTF-8"));
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        bundle.assertContentEquals("Hello, World!".getBytes(StandardCharsets.UTF_8));
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/octet-stream");
     }
 
@@ -768,25 +742,25 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         try (final InputStream rawIn = new ByteArrayInputStream(runner.getContentAsByteArray(bundle)); final ZipInputStream in = new ZipInputStream(rawIn)) {
             assertNotNull(in.getNextEntry());
             final byte[] part1 = IOUtils.toByteArray(in);
-            assertArrayEquals("Hello".getBytes("UTF-8"), part1);
+            assertArrayEquals("Hello".getBytes(StandardCharsets.UTF_8), part1);
 
             in.getNextEntry();
             final byte[] part2 = IOUtils.toByteArray(in);
-            assertArrayEquals(", ".getBytes("UTF-8"), part2);
+            assertArrayEquals(", ".getBytes(StandardCharsets.UTF_8), part2);
 
             in.getNextEntry();
             final byte[] part3 = IOUtils.toByteArray(in);
-            assertArrayEquals("World!".getBytes("UTF-8"), part3);
+            assertArrayEquals("World!".getBytes(StandardCharsets.UTF_8), part3);
         }
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/zip");
     }
 
     @Test
-    public void testZipException() throws IOException {
+    public void testZipException() {
         final TestRunner runner = TestRunners.newTestRunner(new MergeContent());
         runner.setProperty(MergeContent.MAX_BIN_AGE, "1 sec");
         runner.setProperty(MergeContent.MERGE_FORMAT, MergeContent.MERGE_FORMAT_ZIP);
@@ -795,9 +769,9 @@ public class TestMergeContent {
         attributes.put(CoreAttributes.MIME_TYPE.key(), "application/plain-text");
         attributes.put("filename", "duplicate-filename.txt");
 
-        runner.enqueue("Hello".getBytes("UTF-8"), attributes);
-        runner.enqueue(", ".getBytes("UTF-8"), attributes);
-        runner.enqueue("World!".getBytes("UTF-8"), attributes);
+        runner.enqueue("Hello".getBytes(StandardCharsets.UTF_8), attributes);
+        runner.enqueue(", ".getBytes(StandardCharsets.UTF_8), attributes);
+        runner.enqueue("World!".getBytes(StandardCharsets.UTF_8), attributes);
         runner.run(2);
 
         runner.assertQueueEmpty();
@@ -816,11 +790,11 @@ public class TestMergeContent {
         attributes.put(CoreAttributes.MIME_TYPE.key(), "application/plain-text");
 
         attributes.put(CoreAttributes.FILENAME.key(), "AShortFileName");
-        runner.enqueue("Hello".getBytes("UTF-8"), attributes);
+        runner.enqueue("Hello".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(CoreAttributes.FILENAME.key(), "ALongerrrFileName");
-        runner.enqueue(", ".getBytes("UTF-8"), attributes);
+        runner.enqueue(", ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(CoreAttributes.FILENAME.key(), "AReallyLongggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggFileName");
-        runner.enqueue("World!".getBytes("UTF-8"), attributes);
+        runner.enqueue("World!".getBytes(StandardCharsets.UTF_8), attributes);
         runner.run(2);
 
         runner.assertQueueEmpty();
@@ -828,23 +802,23 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         try (final InputStream rawIn = new ByteArrayInputStream(runner.getContentAsByteArray(bundle)); final TarArchiveInputStream in = new TarArchiveInputStream(rawIn)) {
             ArchiveEntry entry = in.getNextEntry();
             assertNotNull(entry);
             assertEquals("AShortFileName", entry.getName());
             final byte[] part1 = IOUtils.toByteArray(in);
-            assertArrayEquals("Hello".getBytes("UTF-8"), part1);
+            assertArrayEquals("Hello".getBytes(StandardCharsets.UTF_8), part1);
 
             entry = in.getNextEntry();
             assertEquals("ALongerrrFileName", entry.getName());
             final byte[] part2 = IOUtils.toByteArray(in);
-            assertArrayEquals(", ".getBytes("UTF-8"), part2);
+            assertArrayEquals(", ".getBytes(StandardCharsets.UTF_8), part2);
 
             entry = in.getNextEntry();
             assertEquals("AReallyLongggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggFileName", entry.getName());
             final byte[] part3 = IOUtils.toByteArray(in);
-            assertArrayEquals("World!".getBytes("UTF-8"), part3);
+            assertArrayEquals("World!".getBytes(StandardCharsets.UTF_8), part3);
         }
         bundle.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "application/tar");
     }
@@ -867,7 +841,7 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 2);
 
-        final MockFlowFile merged = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile merged = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
         merged.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), StandardFlowFileMediaType.VERSION_3.getMediaType());
     }
 
@@ -882,19 +856,19 @@ public class TestMergeContent {
         attributes.put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "4");
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
 
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "4");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
 
         runner.run();
 
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes("UTF-8"));
+        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes(StandardCharsets.UTF_8));
     }
 
     @Test
@@ -907,23 +881,23 @@ public class TestMergeContent {
         attributes.put(MergeContent.FRAGMENT_ID_ATTRIBUTE, "1");
 
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
 
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
 
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
 
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "4");
         attributes.put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "4");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
 
         runner.run();
 
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes("UTF-8"));
+        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes(StandardCharsets.UTF_8));
     }
 
     @Test
@@ -934,53 +908,37 @@ public class TestMergeContent {
 
         final String fragmentId = "Fragment Id";
 
-        runner.enqueue("Fragment 1 without count ".getBytes("UTF-8"), new HashMap<String, String>() {{
-            put(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId);
-            put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
-        }});
+        runner.enqueue("Fragment 1 without count ".getBytes(StandardCharsets.UTF_8), Map.of(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId,
+                MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1"));
 
-        runner.enqueue("Fragment 2 with count ".getBytes("UTF-8"), new HashMap<String, String>() {{
-            put(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId);
-            put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-            put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "3");
-        }});
+        runner.enqueue("Fragment 2 with count ".getBytes(StandardCharsets.UTF_8), Map.of(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId,
+                    MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2", MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "3"));
 
-        runner.enqueue("Fragment 3 without count".getBytes("UTF-8"), new HashMap<String, String>() {{
-            put(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId);
-            put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        }});
+        runner.enqueue("Fragment 3 without count".getBytes(StandardCharsets.UTF_8), Map.of(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId, MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3"));
 
         runner.run();
 
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        assembled.assertContentEquals("Fragment 1 without count Fragment 2 with count Fragment 3 without count".getBytes("UTF-8"));
+        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        assembled.assertContentEquals("Fragment 1 without count Fragment 2 with count Fragment 3 without count".getBytes(StandardCharsets.UTF_8));
     }
 
     @Test
-    public void testDefragmentWithDifferentFragmentCounts() throws IOException {
+    public void testDefragmentWithDifferentFragmentCounts() {
         final TestRunner runner = TestRunners.newTestRunner(new MergeContent());
         runner.setProperty(MergeContent.MERGE_STRATEGY, MergeContent.MERGE_STRATEGY_DEFRAGMENT);
         runner.setProperty(MergeContent.MAX_BIN_AGE, "1 min");
 
         final String fragmentId = "Fragment Id";
 
-        runner.enqueue("Fragment 1 with count ".getBytes("UTF-8"), new HashMap<String, String>() {{
-            put(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId);
-            put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
-            put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "2");
-        }});
+        runner.enqueue("Fragment 1 with count ".getBytes(StandardCharsets.UTF_8), Map.of(MergeContent.FRAGMENT_ID_ATTRIBUTE,
+                fragmentId, MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1", MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "2"));
 
-        runner.enqueue("Fragment 2 with count ".getBytes("UTF-8"), new HashMap<String, String>() {{
-            put(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId);
-            put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-            put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "3");
-        }});
+        runner.enqueue("Fragment 2 with count ".getBytes(StandardCharsets.UTF_8), Map.of(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId,
+                MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2", MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "3"));
 
-        runner.enqueue("Fragment 3 without count".getBytes("UTF-8"), new HashMap<String, String>() {{
-            put(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId);
-            put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        }});
+        runner.enqueue("Fragment 3 without count".getBytes(StandardCharsets.UTF_8), Map.of(MergeContent.FRAGMENT_ID_ATTRIBUTE, fragmentId,
+                MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3"));
 
         runner.run();
 
@@ -1000,22 +958,22 @@ public class TestMergeContent {
         attributes.put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "4");
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
 
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
         // enqueue a duplicate fragment
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "4");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
 
         runner.run(1, false);
 
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes("UTF-8"));
+        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes(StandardCharsets.UTF_8));
 
         runner.clearTransferState();
         Thread.sleep(1_100L);
@@ -1035,24 +993,24 @@ public class TestMergeContent {
         attributes.put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "4");
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
 
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "4");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
 
         runner.run();
 
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes("UTF-8"));
+        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes(StandardCharsets.UTF_8));
     }
 
     @Test
-    public void testDefragmentWithTooFewFragments() throws IOException {
+    public void testDefragmentWithTooFewFragments() {
         final TestRunner runner = TestRunners.newTestRunner(new MergeContent());
         runner.setProperty(MergeContent.MERGE_STRATEGY, MergeContent.MERGE_STRATEGY_DEFRAGMENT);
         runner.setProperty(MergeContent.MAX_BIN_AGE, "2 secs");
@@ -1062,13 +1020,13 @@ public class TestMergeContent {
         attributes.put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "5");
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
 
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "4");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
 
         runner.run(1, false);
 
@@ -1076,7 +1034,7 @@ public class TestMergeContent {
             try {
                 Thread.sleep(3000L);
                 break;
-            } catch (final InterruptedException ie) {
+            } catch (final InterruptedException ignored) {
             }
         }
         runner.run(1);
@@ -1095,21 +1053,21 @@ public class TestMergeContent {
         attributes.put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "4");
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
 
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "4");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
 
         runner.run();
 
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes("UTF-8"));
+        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes(StandardCharsets.UTF_8));
 
-        runner.getFlowFilesForRelationship(MergeContent.REL_ORIGINAL).stream().forEach(
+        runner.getFlowFilesForRelationship(MergeContent.REL_ORIGINAL).forEach(
                 ff -> assertEquals(assembled.getAttribute(CoreAttributes.UUID.key()), ff.getAttribute(MergeContent.MERGE_UUID_ATTRIBUTE)));
     }
 
@@ -1128,27 +1086,27 @@ public class TestMergeContent {
         secondAttrs.put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "3");
 
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
         secondAttrs.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
-        runner.enqueue("No x ".getBytes("UTF-8"), secondAttrs);
+        runner.enqueue("No x ".getBytes(StandardCharsets.UTF_8), secondAttrs);
         secondAttrs.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-        runner.enqueue("in ".getBytes("UTF-8"), secondAttrs);
+        runner.enqueue("in ".getBytes(StandardCharsets.UTF_8), secondAttrs);
         secondAttrs.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        runner.enqueue("Nixon".getBytes("UTF-8"), secondAttrs);
+        runner.enqueue("Nixon".getBytes(StandardCharsets.UTF_8), secondAttrs);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "4");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
 
         runner.run(1);
 
         runner.assertTransferCount(MergeContent.REL_MERGED, 2);
         final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes("UTF-8"));
+        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes(StandardCharsets.UTF_8));
         final MockFlowFile assembledTwo = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(1);
-        assembledTwo.assertContentEquals("No x in Nixon".getBytes("UTF-8"));
+        assembledTwo.assertContentEquals("No x in Nixon".getBytes(StandardCharsets.UTF_8));
     }
 
     @Test
@@ -1163,19 +1121,19 @@ public class TestMergeContent {
         attributes.put("fragment.index", "1");
         attributes.put("segment.original.filename", "originalfilename");
 
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put("fragment.index", "2");
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put("fragment.index", "3");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
         attributes.put("fragment.index", "4");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
 
         runner.run();
 
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes("UTF-8"));
+        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes(StandardCharsets.UTF_8));
         assembled.assertAttributeEquals(CoreAttributes.FILENAME.key(), "originalfilename");
     }
 
@@ -1188,28 +1146,28 @@ public class TestMergeContent {
         attributes.put(MergeContent.FRAGMENT_ID_ATTRIBUTE, "1");
         attributes.put(MergeContent.FRAGMENT_COUNT_ATTRIBUTE, "4");
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "1");
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
         runner.run();
 
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "2");
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
         runner.run();
 
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "3");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
         runner.run();
 
         attributes.put(MergeContent.FRAGMENT_INDEX_ATTRIBUTE, "4");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
         runner.run();
 
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes("UTF-8"));
+        final MockFlowFile assembled = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        assembled.assertContentEquals("A Man A Plan A Canal Panama".getBytes(StandardCharsets.UTF_8));
     }
 
     @Test
-    public void testMergeBasedOnCorrelation() throws IOException, InterruptedException {
+    public void testMergeBasedOnCorrelation() {
         final TestRunner runner = TestRunners.newTestRunner(new MergeContent());
         runner.setProperty(MergeContent.MERGE_STRATEGY, MergeContent.MERGE_STRATEGY_BIN_PACK);
         runner.setProperty(MergeContent.MAX_BIN_AGE, "1 min");
@@ -1219,14 +1177,14 @@ public class TestMergeContent {
 
         final Map<String, String> attributes = new HashMap<>();
         attributes.put("attr", "b");
-        runner.enqueue("A Man ".getBytes("UTF-8"), attributes);
-        runner.enqueue("A Plan ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Man ".getBytes(StandardCharsets.UTF_8), attributes);
+        runner.enqueue("A Plan ".getBytes(StandardCharsets.UTF_8), attributes);
 
         attributes.put("attr", "c");
-        runner.enqueue("A Canal ".getBytes("UTF-8"), attributes);
+        runner.enqueue("A Canal ".getBytes(StandardCharsets.UTF_8), attributes);
 
         attributes.put("attr", "b");
-        runner.enqueue("Panama".getBytes("UTF-8"), attributes);
+        runner.enqueue("Panama".getBytes(StandardCharsets.UTF_8), attributes);
 
         runner.run(2);
 
@@ -1241,13 +1199,13 @@ public class TestMergeContent {
 
         if ("c".equals(attr1)) {
             assertEquals("b", attr2);
-            merged1.assertContentEquals("A Canal ", "UTF-8");
-            merged2.assertContentEquals("A Man A Plan Panama", "UTF-8");
+            merged1.assertContentEquals("A Canal ", StandardCharsets.UTF_8);
+            merged2.assertContentEquals("A Man A Plan Panama", StandardCharsets.UTF_8);
         } else {
             assertEquals("b", attr1);
             assertEquals("c", attr2);
-            merged1.assertContentEquals("A Man A Plan Panama", "UTF-8");
-            merged2.assertContentEquals("A Canal ", "UTF-8");
+            merged1.assertContentEquals("A Man A Plan Panama", StandardCharsets.UTF_8);
+            merged2.assertContentEquals("A Canal ", StandardCharsets.UTF_8);
         }
     }
 
@@ -1298,7 +1256,7 @@ public class TestMergeContent {
         runner.run();
 
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile outFile = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile outFile = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
 
         outFile.assertAttributeEquals("abc", "xyz");
         outFile.assertAttributeEquals("hello", "good-bye");
@@ -1328,7 +1286,7 @@ public class TestMergeContent {
         runner.run();
 
         runner.assertTransferCount(MergeContent.REL_MERGED, 1);
-        final MockFlowFile outFile = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
+        final MockFlowFile outFile = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
 
         outFile.assertAttributeEquals("abc", "xyz");
         outFile.assertAttributeNotExists("hello");
@@ -1358,8 +1316,8 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_FAILURE, 0);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 3);
 
-        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).get(0);
-        bundle.assertContentEquals("Hello, World!".getBytes("UTF-8"));
+        final MockFlowFile bundle = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED).getFirst();
+        bundle.assertContentEquals("Hello, World!".getBytes(StandardCharsets.UTF_8));
         bundle.assertAttributeEquals(MergeContent.MERGE_COUNT_ATTRIBUTE, "3");
         bundle.assertAttributeExists(MergeContent.MERGE_BIN_AGE_ATTRIBUTE);
     }
@@ -1372,7 +1330,7 @@ public class TestMergeContent {
         runner.setProperty(MergeContent.MAX_BIN_COUNT, "3");
 
         for (int i = 0; i < 17; i++) {
-            runner.enqueue(String.valueOf(i) + "\n");
+            runner.enqueue(i + "\n");
         }
 
         runner.run(5);
@@ -1380,6 +1338,147 @@ public class TestMergeContent {
         runner.assertTransferCount(MergeContent.REL_MERGED, 3);
         runner.assertTransferCount(MergeContent.REL_ORIGINAL, 15);
         assertEquals(2, runner.getQueueSize().getObjectCount());
+    }
+
+    @Test
+    public void testBinTerminationTriggerStartOfBin() {
+        final TestRunner runner = TestRunners.newTestRunner(new MergeContent());
+        runner.setProperty(MergeContent.MIN_ENTRIES, "10");
+        runner.setProperty(MergeContent.MAX_ENTRIES, "25");
+        runner.setProperty(MergeContent.MAX_BIN_COUNT, "3");
+        runner.setProperty(MergeContent.BIN_TERMINATION_CHECK, "${termination:equals('true')}");
+        runner.setProperty(MergeContent.FLOWFILE_INSERTION_STRATEGY, InsertionLocation.FIRST_IN_NEW_BIN);
+
+        // Enqueue 5 FlowFiles, followed by a FlowFile with the 'termination' attribute set to 'true'.
+        // Do this 3 times.
+        int flowFileIndex = 0;
+        for (int j = 0; j < 3; j++) {
+            for (int i = 0; i < 6; i++) {
+                final Map<String, String> attributes = (i == 5) ? Map.of("termination", "true") : Collections.emptyMap();
+                runner.enqueue((flowFileIndex++) + "\n", attributes);
+            }
+        }
+
+        runner.run(2);
+
+        runner.assertTransferCount(MergeContent.REL_MERGED, 3);
+
+        // We should get out 17 because the last FlowFile has not yet been transferred out, since it is the start of a new bin.
+        runner.assertTransferCount(MergeContent.REL_ORIGINAL, 17);
+
+        final List<MockFlowFile> merged = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED);
+        merged.getFirst().assertContentEquals("0\n1\n2\n3\n4\n");
+        merged.get(1).assertContentEquals("5\n6\n7\n8\n9\n10\n");
+        merged.get(2).assertContentEquals("11\n12\n13\n14\n15\n16\n");
+    }
+
+    @Test
+    public void testBinTerminationTriggerEndOfBin() {
+        final TestRunner runner = TestRunners.newTestRunner(new MergeContent());
+        runner.setProperty(MergeContent.MIN_ENTRIES, "10");
+        runner.setProperty(MergeContent.MAX_ENTRIES, "25");
+        runner.setProperty(MergeContent.MAX_BIN_COUNT, "3");
+        runner.setProperty(MergeContent.BIN_TERMINATION_CHECK, "${termination:equals('true')}");
+        runner.setProperty(MergeContent.FLOWFILE_INSERTION_STRATEGY, InsertionLocation.LAST_IN_BIN);
+
+        // Enqueue 5 FlowFiles, followed by a FlowFile with the 'termination' attribute set to 'true'.
+        // Do this 3 times.
+        int flowFileIndex = 0;
+        for (int j = 0; j < 3; j++) {
+            for (int i = 0; i < 6; i++) {
+                final Map<String, String> attributes = (i == 5) ? Map.of("termination", "true") : Collections.emptyMap();
+                runner.enqueue((flowFileIndex++) + "\n", attributes);
+            }
+        }
+
+        runner.run(2);
+
+        runner.assertTransferCount(MergeContent.REL_MERGED, 3);
+
+        // We should get out 18 because the last FlowFile ended the bin and was transferred out.
+        runner.assertTransferCount(MergeContent.REL_ORIGINAL, 18);
+
+        final List<MockFlowFile> merged = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED);
+        merged.getFirst().assertContentEquals("0\n1\n2\n3\n4\n5\n");
+        merged.get(1).assertContentEquals("6\n7\n8\n9\n10\n11\n");
+        merged.get(2).assertContentEquals("12\n13\n14\n15\n16\n17\n");
+    }
+
+    @Test
+    public void testBinTerminationTriggerIsolated() {
+        final TestRunner runner = TestRunners.newTestRunner(new MergeContent());
+        runner.setProperty(MergeContent.MIN_ENTRIES, "10");
+        runner.setProperty(MergeContent.MAX_ENTRIES, "25");
+        runner.setProperty(MergeContent.MAX_BIN_COUNT, "3");
+        runner.setProperty(MergeContent.BIN_TERMINATION_CHECK, "${termination:equals('true')}");
+        runner.setProperty(MergeContent.FLOWFILE_INSERTION_STRATEGY, InsertionLocation.ISOLATED);
+
+        // Enqueue 5 FlowFiles, followed by a FlowFile with the 'termination' attribute set to 'true'.
+        // Do this 3 times.
+        int flowFileIndex = 0;
+        for (int j = 0; j < 3; j++) {
+            for (int i = 0; i < 6; i++) {
+                final Map<String, String> attributes = (i == 5) ? Map.of("termination", "true") : Collections.emptyMap();
+                runner.enqueue((flowFileIndex++) + "\n", attributes);
+            }
+        }
+
+        runner.run(2);
+
+        runner.assertTransferCount(MergeContent.REL_MERGED, 6);
+
+        // We should get out 18 because the last FlowFile ended the bin and was transferred out.
+        runner.assertTransferCount(MergeContent.REL_ORIGINAL, 18);
+
+        final List<MockFlowFile> merged = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED);
+        merged.getFirst().assertContentEquals("0\n1\n2\n3\n4\n");
+        merged.get(1).assertContentEquals("5\n");
+        merged.get(2).assertContentEquals("6\n7\n8\n9\n10\n");
+        merged.get(3).assertContentEquals("11\n");
+        merged.get(4).assertContentEquals("12\n13\n14\n15\n16\n");
+        merged.get(5).assertContentEquals("17\n");
+    }
+
+    @Test
+    public void testTerminationTriggerWithCorrelationAttribute() {
+        final TestRunner runner = TestRunners.newTestRunner(new MergeContent());
+        runner.setProperty(MergeContent.MIN_ENTRIES, "10");
+        runner.setProperty(MergeContent.MAX_ENTRIES, "25");
+        runner.setProperty(MergeContent.MAX_BIN_COUNT, "3");
+        runner.setProperty(MergeContent.BIN_TERMINATION_CHECK, "${termination:equals('true')}");
+        runner.setProperty(MergeContent.FLOWFILE_INSERTION_STRATEGY, InsertionLocation.FIRST_IN_NEW_BIN);
+        runner.setProperty(MergeContent.CORRELATION_ATTRIBUTE_NAME, "correlation");
+
+        // Enqueue FlowFiles. This should create 2 bins:
+        // '1' should get values 0, 1
+        // Then, '2' should get value 2
+        // Then, FlowFile with content '3' should be the start of a new bin
+        // Then, FlowFile with content '4' should be teh start of another new bin
+        // Then, we add 10 additional FlowFiles to bin 2 in order to fill it without a termination signal
+        // This should leave the FlowFile with content '4' in the bin, but not transferred out.
+        final Map<String, String> terminationAttributes = Map.of("termination", "true", "correlation", "1");
+        final Map<String, String> correlation1 = Map.of("correlation", "1");
+        final Map<String, String> correlation2 = Map.of("correlation", "2");
+
+        runner.enqueue("0\n", correlation1);
+        runner.enqueue("1\n", correlation1);
+        runner.enqueue("2\n", correlation2);
+        runner.enqueue("3\n", terminationAttributes);
+        runner.enqueue("4\n", terminationAttributes);
+
+        for (int i = 0; i < 10; i++) {
+            runner.enqueue(i + "\n", correlation2);
+        }
+
+        runner.run(2);
+
+        runner.assertTransferCount(MergeContent.REL_MERGED, 3);
+        runner.assertTransferCount(MergeContent.REL_ORIGINAL, 14);
+
+        final List<MockFlowFile> merged = runner.getFlowFilesForRelationship(MergeContent.REL_MERGED);
+        merged.getFirst().assertContentEquals("0\n1\n");
+        merged.get(1).assertContentEquals("3\n");
+        merged.get(2).assertContentEquals("2\n0\n1\n2\n3\n4\n5\n6\n7\n8\n9\n");
     }
 
     private void createFlowFiles(final TestRunner testRunner) {
