@@ -18,6 +18,7 @@ package org.apache.nifi.web.client.provider.service;
 
 import org.apache.nifi.annotation.documentation.CapabilityDescription;
 import org.apache.nifi.annotation.documentation.Tags;
+import org.apache.nifi.annotation.lifecycle.OnDisabled;
 import org.apache.nifi.annotation.lifecycle.OnEnabled;
 import org.apache.nifi.components.PropertyDescriptor;
 import org.apache.nifi.components.PropertyValue;
@@ -26,7 +27,7 @@ import org.apache.nifi.controller.ConfigurationContext;
 import org.apache.nifi.processor.util.StandardValidators;
 import org.apache.nifi.proxy.ProxyConfiguration;
 import org.apache.nifi.proxy.ProxyConfigurationService;
-import org.apache.nifi.ssl.SSLContextService;
+import org.apache.nifi.ssl.SSLContextProvider;
 import org.apache.nifi.web.client.StandardHttpUriBuilder;
 import org.apache.nifi.web.client.api.HttpUriBuilder;
 import org.apache.nifi.web.client.proxy.ProxyContext;
@@ -36,14 +37,16 @@ import org.apache.nifi.web.client.ssl.TlsContext;
 import org.apache.nifi.web.client.api.WebClientService;
 import org.apache.nifi.web.client.provider.api.WebClientServiceProvider;
 
+import javax.net.ssl.SSLContext;
+import javax.net.ssl.X509ExtendedKeyManager;
 import javax.net.ssl.X509KeyManager;
 import javax.net.ssl.X509TrustManager;
 import java.net.Proxy;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
 
 import static org.apache.nifi.proxy.ProxyConfigurationService.PROXY_CONFIGURATION_SERVICE;
 
@@ -92,10 +95,10 @@ public class StandardWebClientServiceProvider extends AbstractControllerService 
             .displayName("SSL Context Service")
             .description("SSL Context Service overrides system default TLS settings for HTTPS communication")
             .required(false)
-            .identifiesControllerService(SSLContextService.class)
+            .identifiesControllerService(SSLContextProvider.class)
             .build();
 
-    static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = Arrays.asList(
+    private static final List<PropertyDescriptor> PROPERTY_DESCRIPTORS = List.of(
             CONNECT_TIMEOUT,
             READ_TIMEOUT,
             WRITE_TIMEOUT,
@@ -104,9 +107,7 @@ public class StandardWebClientServiceProvider extends AbstractControllerService 
             PROXY_CONFIGURATION_SERVICE
     );
 
-    private static final KeyManagerProvider keyManagerProvider = new StandardKeyManagerProvider();
-
-    private WebClientService webClientService;
+    private StandardWebClientService webClientService;
 
     @OnEnabled
     public void onEnabled(final ConfigurationContext context) {
@@ -127,8 +128,8 @@ public class StandardWebClientServiceProvider extends AbstractControllerService 
 
         final PropertyValue sslContextServiceProperty = context.getProperty(SSL_CONTEXT_SERVICE);
         if (sslContextServiceProperty.isSet()) {
-            final SSLContextService sslContextService = sslContextServiceProperty.asControllerService(SSLContextService.class);
-            final TlsContext tlsContext = getTlsContext(sslContextService);
+            final SSLContextProvider sslContextProvider = sslContextServiceProperty.asControllerService(SSLContextProvider.class);
+            final TlsContext tlsContext = getTlsContext(sslContextProvider);
             standardWebClientService.setTlsContext(tlsContext);
         }
 
@@ -141,6 +142,11 @@ public class StandardWebClientServiceProvider extends AbstractControllerService 
         }
 
         webClientService = standardWebClientService;
+    }
+
+    @OnDisabled
+    public void onDisabled() {
+        webClientService.close();
     }
 
     @Override
@@ -163,14 +169,15 @@ public class StandardWebClientServiceProvider extends AbstractControllerService 
         return Duration.ofMillis(millis);
     }
 
-    private TlsContext getTlsContext(final SSLContextService sslContextService) {
-        final X509TrustManager trustManager = sslContextService.createTrustManager();
-        final Optional<X509KeyManager> keyManager = keyManagerProvider.getKeyManager(sslContextService);
+    private TlsContext getTlsContext(final SSLContextProvider sslContextProvider) {
+        final X509TrustManager trustManager = sslContextProvider.createTrustManager();
+        final Optional<X509ExtendedKeyManager> keyManager = sslContextProvider.createKeyManager();
+        final SSLContext sslContext = sslContextProvider.createContext();
 
         return new TlsContext() {
             @Override
             public String getProtocol() {
-                return sslContextService.getSslAlgorithm();
+                return sslContext.getProtocol();
             }
 
             @Override
@@ -180,7 +187,7 @@ public class StandardWebClientServiceProvider extends AbstractControllerService 
 
             @Override
             public Optional<X509KeyManager> getKeyManager() {
-                return keyManager;
+                return keyManager.map(Function.identity());
             }
         };
     }
